# sdl-flusspferd

./: CMakeLists.txt  ChangeLog.txt  README
CMakeModules/: FindFlusspferd.cmake
src/: general.cpp  general.hpp  mouse.hpp  sdl-key.cpp  sdl.hpp  sdl.jsdoc  video.hpp
src/plugins/sdl/: Surface.hpp  TODO  events.cpp  events.hpp  example.js  general.cpp  generator.py  joystick.cpp  joystick.hpp  mouse.cpp  rect.cpp  rect.hpp  sdl-key.cpp  sdl-key.hpp  sdl.cpp  sdl.jsdoc  video.cpp  wm.cpp  wm.hpp
